--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,10 @@ loom {
 }
 
 dependencies {
-	implementation "com.fasterxml.jackson.core:jackson-databind:${project.jackson_version}"
-	implementation "com.fasterxml.jackson.module:jackson-module-kotlin:${project.jackson_version}"
+	modImplementation include("com.fasterxml.jackson.core:jackson-core:${project.jackson_version}")
+	modImplementation include("com.fasterxml.jackson.core:jackson-annotations:${project.jackson_version}")
+	modImplementation include("com.fasterxml.jackson.core:jackson-databind:${project.jackson_version}")
+	modImplementation include("com.fasterxml.jackson.module:jackson-module-kotlin:${project.jackson_version}")
 
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
