feat: 多版本控制

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,17 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
-fabric_kotlin_version=1.13.3+kotlin.2.1.21
+# Project Desc
+mod_id=kotreen
+mod_name=Kotreen
 
-# Mod Properties
+# Project Properties
 mod_version=1.1.0
 maven_group=top.htext
 archives_base_name=kotreen
+loom_version=1.10-SNAPSHOT
 
-# Dependencies
+# Project Dependencies
+preprocess_version=d452ef7612
+fabric_kotlin_version=1.13.3+kotlin.2.1.21
 jackson_version=2.18.4
-fabric_version=0.92.5+1.20.1
-carpet_core_version=1.20-1.4.112+v230608
