feat: Minecraft 1.20.2 Temporally

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ mod_name=Kotreen
 mod_version=1.1.0
 maven_group=top.htext
 archives_base_name=kotreen
-loom_version=1.10-SNAPSHOT
 
 # Project Dependencies
-preprocess_version=d452ef7612
-fabric_kotlin_version=1.13.3+kotlin.2.1.21
+preprocessor_version=b19902e6ff
+fabric_kotlin_version=1.13.9+kotlin.2.3.10
 jackson_version=2.18.4
+loom_version=1.10-SNAPSHOT
+kotlin_jvm_version=2.3.10
