--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,17 @@
 plugins {
 	id "fabric-loom" version "${loom_version}" apply false
-	id "org.jetbrains.kotlin.jvm" version "2.1.21" apply false
+	id "org.jetbrains.kotlin.jvm" version "${kotlin_jvm_version}" apply false
+	id "com.replaymod.preprocess" version "${preprocessor_version}"
 	id "maven-publish"
-	id "com.replaymod.preprocess" version "${preprocess_version}"
 }
 
 preprocess {
+	strictExtraMappings = false
+
 	def mc12001 = createNode("1.20.1", 1_20_01, "yarn")
+	def mc12002 = createNode("1.20.2", 1_20_02, "yarn")
+
+
+
+	mc12001.link(mc12002, null)
 }
