--- a/versions/1.20.1/build.gradle
+++ b/versions/1.20.1/build.gradle
@@ -1,8 +1,10 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 apply plugin: "org.jetbrains.kotlin.jvm"
 apply plugin: "fabric-loom"
 apply plugin: "com.replaymod.preprocess"
+
+preprocess {
+    vars.put("mcVersion", 12002)
+}
 
 repositories {
     maven {url "https://masa.dy.fi/maven" }
@@ -33,14 +35,15 @@ dependencies {
 processResources {
     inputs.property("version", project.version)
 
+    def resourceMap = [
+            "version": project.version,
+            "mod_id": project.mod_id,
+            "mod_name": project.mod_name,
+            "loader_version": project.loader_version,
+            "minecraft_version": project.minecraft_version
+    ]
+
     filesMatching("fabric.mod.json") {
-        def resourceMap = [
-                "version": project.version,
-                "mod_id": project.mod_id,
-                "mod_name": project.mod_name,
-                "loader_version": project.loader_version,
-                "minecraft_version": project.minecraft_version
-        ]
         expand resourceMap
     }
 }
@@ -55,18 +58,15 @@ jar {
 
 java {
     withSourcesJar()
-    targetCompatibility = JavaVersion.VERSION_17
-    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_21
 }
 
-tasks.withType(KotlinCompile).configureEach {
-    it.kotlinOptions.jvmTarget = 17
-}
-
-tasks.withType(JavaCompile).configureEach {
-    it.options.release = 17
+kotlin {
+    jvmToolchain(21)
 }
 
 tasks.withType(JavaCompile).configureEach {
+    it.options.release = 21
     it.options.encoding = "UTF-8"
 }
