--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ preprocess {
 
 	def mc12001 = createNode("1.20.1", 1_20_01, "yarn")
 	def mc12002 = createNode("1.20.2", 1_20_02, "yarn")
+	def mc12004 = createNode("1.20.4", 1_20_04, "yarn")
+	def mc12006 = createNode("1.20.6", 1_20_06, "yarn")
 
 	mc12001.link(mc12002, null)
+	mc12002.link(mc12004, null)
+	mc12004.link(mc12006, null)
 }
