--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,18 @@ jobs:
         run: chmod +x ./gradlew
       - name: build
         run: ./gradlew build
+
+      - name: collect build artifacts
+        run : |
+          shopt -s extglob
+          mkdir jars
+          for jar in versions/*/build/libs/!(*-@(dev|sources|shadow)).jar; do
+              cp -p "$jar" jars/
+          done
+          ls -l jars
         
       - name: capture build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
-          path: build/libs/
+          path: jars/*.jar
